--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .git-ftp-ignore
+# macOS: file that stores custom attributes of its containing folder
+# find . -name .DS_Store -print0 | xargs -0 git rm -f --ignore-unmatch
+.DS_Store
